--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -23,4 +23,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\LifeGameService\LifeGameService.csproj" />
+	</ItemGroup>
+
 </Project>
